@@ -7,6 +7,12 @@ Sources
 
 Releases
 {
+  v8r8p15
+  {
+    Modules = LHCbDIRAC:v8r8p15, LHCbWebDIRAC:v4r3p3
+    Depends = DIRAC:v6r17p29
+    LcgVer = 2017-05-23
+  }
 
   v8r8p14
   {
