@@ -1,3 +1,8 @@
+[v8r8p15]
+use DIRAC v6r17p29
+
+* GitlabCI: unit test on merge request
+
 [v8r8p14]
 use DIRAC v6r17p28
 
